fix: corrige visibilidade dos dominios

--- a/recordm/customUI/css/_dash.css
+++ b/recordm/customUI/css/_dash.css
@@ -137,3 +137,6 @@
     .cob-app .definition-container .fields-container .root-fields > .field .remove-button {
         left: -41px;
     }
+    .domains-definitions .collapse {
+        visibility: unset;
+    }
